MILESTONE3_BE - KCAL summations